showing different proposals

--- a/html/current.html
+++ b/html/current.html
@@ -109,7 +109,7 @@
                        ms: 100,
                        hs: 100},
                },
-            1: {name: 'Harris Other',
+            1: {name: 'Harris Main',
                 path: 'ybinEf_s`OtAuHcJiR{GeIaOcf@w@qFbBgJkHyYxPoMtAgCeZgdAg]ya@eMha@qJvQkDbW_C|ScVxQuYhRcZvQyLbOqNjSxXbWpVjSnKvIhTxC`[bHhh@bcA`OvIrEoM|GePhL{ZfM_FmCmMtIyJ',
                 schoolId: 0,
                 students: {
