made builder larger

--- a/html/builder.html
+++ b/html/builder.html
@@ -118,7 +118,7 @@
                        hs: 100},
                },
             2: {name: 'Mall',
-                path: 'ktinEbuq`O_Oej@lAsKuGwXpRoQuYifAg]ka@pBwQtEoBtSgCbVgF`_@_U`DjHbHvMrP`l@lWps@nSri@as@nc@aYp`@uWfY',
+                path: '',
                 schoolId: 1,
                 students: {
                        es: 128, 
@@ -339,25 +339,7 @@ function showInfoHood(event, hood, poly) {
 </script>
 </head>
 <body onload="initialize()">
-  <div id="map_canvas" style="width:60%; height:80%"></div>
-  <div style="text-align:center">
-  Info: 	
-  <textarea id="info" rows="6" cols="200"></textarea>
-  </div>
-  <div style="text-align:center; visibility: hidden; display: none">
-  </div>
-  <div style="text-align:center">
-  Points: 	
-  <textarea id="points" rows="3" cols="200"></textarea>
-  </div>
-  <div style="text-align:center">
-  <input type="button" value="Toggle Overlays" onClick="toggleOverlays()"/>
-  <input type="button" value="Load" onClick="loadPoly()"/>
-  </div>
-  <div style="text-align:center">
-  Load:
-  <textarea id="load" rows="3" cols="200"></textarea>
-  </div>
+  <div id="map_canvas" style="width:100%; height:80%"></div>
   <div style="text-align:center">
   Encoding:
   <textarea id="encodedPolyline" rows="3" cols="200"></textarea>
