drafting some map alternatives

--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,13 @@
 <a href="/current">School Year 2010-2011</a>
 <br/>
+<br/>
 <a href="/proposal">Initial GCBE proposal</a>
+<br/>
+<br/>
+<b>Alternatives</b>
+<ol>
+<li><a href="/h/bunten_only">South of Bunten to Harris</a></li>
+<li><a href="/h/proposal_plus_bunten">GCBE Proposal with Bunten</a></li>
+<li><a href="/h/bunten_davenport">South of Bunten and Davenport to Harris</a></li>
+<li><a href="/h/bunten_davenport_bromolow">South of Bunten and Davenport to Harris, Bromolow to Chesney</a></li>
+</ol>
