--- a/html/proposal_plus_bunten.html
+++ b/html/proposal_plus_bunten.html
@@ -12,6 +12,7 @@ function configureHoods() {
   hoods[0].schoolId = 2;
   hoods[2].schoolId = 0;
   hoods[17].schoolId = 0;
+  hoods[16].schoolId = 0;
 }
 </script>
 
