--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<title>Duluth Redistricting Maps</title>
+
+</head>
+<body>
 <a href="/current">School Year 2010-2011</a>
 <br/>
 <br/>
@@ -11,3 +17,5 @@
 <li><a href="/h/bunten_davenport">South of Bunten and Davenport to Harris</a></li>
 <li><a href="/h/bunten_davenport_bromolow">South of Bunten and Davenport to Harris, Bromolow to Chesney</a></li>
 </ol>
+</body>
+</html>
