added link to polyline tool from builder

--- a/html/builder.html
+++ b/html/builder.html
@@ -349,6 +349,7 @@ function showInfoHood(event, hood, poly) {
   Decoding:
   <textarea id="decodedPolyline" rows="3" cols="200"></textarea>
   </div>
+  <a href="http://code.google.com/apis/maps/documentation/utilities/polylineutility.html">Polyline tool</a>
 </body>
 
 </html>
